Thu Apr 16 22:59:32 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* eval.c (func_call): Save nloops_active; if after function returns
	the actual nloops_active is greater than the saved value, it means
	there was a return inside the loop body, so pop off the necessary
	number of loops.  Bug reported by Aleksey Cheusov <a.cheusov@gmail.com>.
	Gawk was not leaking memory - that is, things were still pointed
	to, but memory use could keep on growing.

Fri Mar 27 10:59:11 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (format_tree): Add lint warnings for fieldwidth and/or
	precision in %%, and add lint warning for unknown format specifier
	(e.g. %b). Thanks to "joanes.polus" <joanes.polus@laposte.net> for
	the report.

Wed Mar 18 18:15:41 2009	Pat Rankin	<rankin@pactechdata.com>

	* awk.h (EXIT_SUCCESS, EXIT_FAILURE): Move VMS-specific values
	to vms/vms-conf.h.
	(EXIT_FATAL): Define here instead of in msg.c.
	* msg.c (EXIT_FATAL): Move definition to awk.h.

Mon Mar 16 18:58:09 2009	Pat Rankin	<rankin@pactechdata.com>

	* main.c [#if HAVE_SIGSEGV_H]: For the #else case (VMS),
	(stackoverflow_context_t): Dummy typedef for use in prototypes;
	(stackoverflow_install_handler): Make macro expand to 0 rather
	than nothing so that (void) cast on invocation of it works.

	* main.c (catchstackoverflow): Don't return 0 from void function.

Wed Feb 25 21:34:14 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y (tokentab): Have only one copy of BEGIN / END.
	(tokcompare): New function.
	(check_special): Sort tokentab for EBCDIC systems.

Sun Feb 15 22:39:30 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* profile.c (pp_delete): Print tree->exec_count to actually get
	the value printed. Thanks to Hermann Peifer <peifer@gmx.eu>
	for reporting the bug.

Thu Feb 12 21:54:34 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* awkgram.y: Change to use EXIT_FAILURE.
	* msg.c [EXIT_FATAL]: New macro.
	* msg.c (r_fatal): Change to use EXIT_FATAL.