@@ -1,3 +1,14 @@
+Wed Sep 23 14:57:24 UTC 2009 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 251.
+
+	* gawk.texi (Bugs): Add a note to also send bug reports to
+	the GNU mailing address, not just to whatever distribution
+	bug-tracking system.
+	(String Functions): Document use of untyped variables with
+	length as problematic.
+	* gawk.info: Ignoring patches of generated files.
+
 Wed Sep 23 14:26:49 UTC 2009 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
 	Sync with savannah gawk cvsps 250.
